既存コードの実装を修正
